--- a/styles/tables.css
+++ b/styles/tables.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #2B2D42;
+  background-color: #8D99AE;
   height: 100%;
 }
 #root {
@@ -25,11 +25,12 @@ body {
   flex-wrap: wrap;
   width: 100%;
   margin-top: 4rem;
-  margin-bottom: 4rem;  
+  margin-bottom: 2rem;  
 }
 tr, td {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;  
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  
 }
 #sorteado{
   color:#ff00ff
