feat:adicionando media queries e dando responsividade ao site em dispositivos celulares

--- a/styles/home.css
+++ b/styles/home.css
@@ -47,3 +47,15 @@ body {
   font-size: 2em;
   color: #EDF2F4;
 }
+
+@media (max-width: 700px) {
+  #icons{
+    width: 20rem;
+  }
+  #root h1{
+    font-size: 1.8rem;
+  }
+  #icon-title{
+    font-size: 1.4rem;
+  }
+}
