--- a/styles/form.css
+++ b/styles/form.css
@@ -44,3 +44,15 @@ body {
 #showArchive{
   margin-bottom: 2rem;
 }
+
+@media (max-width: 700px) {  
+  #root h1{
+    font-size: 1.8rem;
+  }
+  #inputArchive, #labelFile{
+    font-size: 0.8rem;
+  }
+  #archive{
+   width: 95%;
+  }  
+}
