--- a/styles/homeButton.css
+++ b/styles/homeButton.css
@@ -10,3 +10,10 @@
   height: 3.4rem;
   
 }
+@media (max-width: 700px) { 
+  #btn-to-home{
+    font-size: 1.2rem;
+    width: 7rem;
+    height: 3rem;
+  }
+}
