--- a/styles/tables.css
+++ b/styles/tables.css
@@ -27,10 +27,20 @@ body {
   margin-top: 4rem;
   margin-bottom: 2rem;  
 }
+table { 
+  border-collapse: collapse;
+}
 tr, td {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  
+  border: 1px solid #000;
+  padding: 0.7rem;  
+}
+table tr:nth-child(odd) {
+  background: #EDF2F4; 
+}
+table tr:nth-child(even) {
+  background: #8D99AE; 
 }
 #sorteado{
   color:#ff00ff
@@ -39,4 +49,18 @@ tr, td {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+
+@media (max-width: 700px) {  
+  #root h1{
+    font-size: 1.8rem;
+  }
+  table {
+    margin-bottom: 2rem;    
+    display: table;
+  }
+  tr, td {
+    padding: 0.3rem;
+  }
 }
